--- a/landing-page/home.html
+++ b/landing-page/home.html
@@ -302,7 +302,7 @@
         <div class="row">
           <!-- Start Col -->
           <div class="col-lg-6 col-md-6 col-md-12">
-          
+          <form id="contactForm">
             <div class="row">
               <div class="col-md-8">
                 <div class="form-group">
@@ -341,7 +341,7 @@
                 </div>
               </div>
             </div>            
-          
+          </form>
           </div>
           <!-- End Col -->
           <!-- Start Col -->
