--- a/landing-page/home.html
+++ b/landing-page/home.html
@@ -143,11 +143,11 @@
           <div class="col-lg-6 col-md-12 pl-4">
             <div class="business-item-info">
               <h3>A little bit about me</h3>
-              <p>In 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
+              <p>Hello I'm Juan,<br/> in 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
               <p>At this point of my career, after having worked mostly in Global Finance roles for the past 9 years, I decided to pivot fully into cryptocurrencies and have set up this consultancy to help onboard individuals and SME's. I hope to meet you soon to show you how passionate I am about my clients education and success within this space.</p>
               <ul>
                 <li>+7 years working in Corporate Finance</li>
-                <li>+7 years working in Fortune 500 companies</li>
+                <li>+5 years working in Fortune 500 companies</li>
                 <li>+5 years involved in Cryptocurrencies/Blockchain</li>
               </ul>
             </div>
@@ -217,7 +217,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>PLANNING & INVESTING</h4>
-                 <p>Investing can be stressful and you should never invest money you are not willing to lose. We will provide you with guidance on investing principles based on our experience.</p>
+                 <p>Investing can be stressful and you should never invest more than you can afford to lose. We will provide you with guidance on investing principles based on my experience.</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -290,7 +290,7 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="desc-text">
                   <p></p>
-                  <p>Feel free to reach us on whatsapp, email or by phone at any time.<br/>Cryptocurrencies operate 24/7 and we want to be on par for our customers and their needs.</p>
+                  <p>Feel free to reach me on whatsapp, email or by phone at any time.<br/>Cryptocurrencies operate 24/7 and we want to be on par for our customers and their needs.</p>
                 </div>
               </div> 
             </div>
