--- a/landing-page/es/index.html
+++ b/landing-page/es/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <i class="lni-cog"></i>
+                <img src="./img/CC_Security.png">
               </div>
               <h4>Security & Privacy Fundamentals</h4>
               <p>Privacy and security are foundations of the blockchain and I treat them no differently.</p>
@@ -101,7 +101,7 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <i class="lni-brush"></i>
+                <img src="./img/CC_Customer.png">
               </div>
               <h4>Customer Centric Obsession</h4>
               <p>The obsession to drive positive customer experiences is at the heart of our business.</p>
@@ -112,7 +112,7 @@
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="services-item text-center">
               <div class="icon">
-                <i class="lni-heart"></i>
+                <img src="./img/CC_Knowledge.png">
               </div>
               <h4>Build Knowledge & Confidence</h4>
               <p>Learn about the 7 principles of Bitcoin, Cryptocurrencies and Blockchain Technology.</p>
@@ -143,7 +143,8 @@
           <div class="col-lg-6 col-md-12 pl-4">
             <div class="business-item-info">
               <h3>A little bit about me</h3>
-              <p>Hello I'm Juan,<br/> in 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
+              <p>Hello I'm Juan,</p>
+              <p>In 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
               <p>At this point of my career, after having worked mostly in Global Finance roles for the past 9 years, I decided to pivot fully into cryptocurrencies and have set up this consultancy to help onboard individuals and SME's. I hope to meet you soon to show you how passionate I am about my clients education and success within this space.</p>
               <ul>
                 <li>+7 years working in Corporate Finance</li>
@@ -414,7 +415,7 @@
                 </ul>
                 <div class="subscribe-area">
                   <input type="email" class="form-control" placeholder="Enter Email">
-                  <span><i class="lni-chevron-right"></i></span>
+                  <span id="subscribe"><i class="lni-chevron-right"></i></span>
                 </div>
               </div>
             </div>
