--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -411,7 +411,7 @@
                 <h3 class="block-title">Contact</h3>
                 <ul class="menu">
                     <li><a href="#">contact@consultacrypto.com</a></li>
-                    <li><a href="#">+32 472 600 </a></li>
+                    <li><a href="#">+32 472 600 622</a></li>
                 </ul>
                 <div class="subscribe-area">
                   <input type="email" class="form-control" placeholder="Enter Email">
