--- a/landing-page/es/index.html
+++ b/landing-page/es/index.html
@@ -36,16 +36,16 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#home">Home</a>
+                <a class="nav-link page-scroll" href="#home">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#services">About</a>
+                <a class="nav-link page-scroll" href="#services">Sobre Mi</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#features">Services</a>
+                <a class="nav-link page-scroll" href="#features">Servicios</a>
               </li>    
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#contact">Contact</a>
+                <a class="nav-link page-scroll" href="#contact">Contacto</a>
               </li>                         
             </ul>
           </div>
