--- a/landing-page/es/index.html
+++ b/landing-page/es/index.html
@@ -55,7 +55,7 @@
         <div class="row space-100">
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">Bitcoin and Cryptocurrencies are for everyone.<br/>Don't be left out because you lack the knowledge to invest.</h2>
+              <h2 class="head-title">Bitcoin y las criptodivisas are for everyone.<br/>Don't be left out because you lack the knowledge to invest.</h2>
               <p>With Consulta Crypto you will understand every step of the way and feel the confidence to operate safely with cryptocurrencies.</p>
               <div class="header-button">
                 <a href="#contact" class="btn btn-border-filled">Contact Us</a>
