--- a/landing-page/es/index.html
+++ b/landing-page/es/index.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#home">Inicio Juanjo</a>
+                <a class="nav-link page-scroll" href="#home">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#services">Sobre Mi</a>
@@ -55,10 +55,10 @@
         <div class="row space-100">
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">Bitcoin y las criptodivisas are for everyone.<br/>Don't be left out because you lack the knowledge to invest.</h2>
-              <p>With Consulta Crypto you will understand every step of the way and feel the confidence to operate safely with cryptocurrencies.</p>
+              <h2 class="head-title">Bitcoin y las criptodivisas son para todos.<br/>No te quedes fuera por la falta de conocimiento y confianza.</h2>
+              <p>Con la Consulta Crypto aprenderás y entenderás los procesos necesarios para operar de manera segura con criptodivisas.</p>
               <div class="header-button">
-                <a href="#contact" class="btn btn-border-filled">Contact Us</a>
+                <a href="#contact" class="btn btn-border-filled">Contáctanos</a>
               </div>
             </div>
           </div>
@@ -92,8 +92,8 @@
               <div class="icon">
                 <img src="./img/CC_Security.png">
               </div>
-              <h4>Security & Privacy Fundamentals</h4>
-              <p>Privacy and security are foundations of the blockchain and I treat them no differently.</p>
+              <h4>Seguridad y privacidad</h4>
+              <p>La privacidad y la seguridad son bases del blockchain y no las trato de manera diferente.</p>
             </div>
           </div>
           <!-- End Col -->
@@ -103,8 +103,8 @@
               <div class="icon">
                 <img src="./img/CC_Customer.png">
               </div>
-              <h4>Customer Centric Obsession</h4>
-              <p>The obsession to drive positive customer experiences is at the heart of our business.</p>
+              <h4>Obsesión por el cliente</h4>
+              <p>El objetivo es generar experiencias positivas para los clientes.</p>
             </div>
           </div>
           <!-- End Col -->
@@ -114,8 +114,8 @@
               <div class="icon">
                 <img src="./img/CC_Knowledge.png">
               </div>
-              <h4>Build Knowledge & Confidence</h4>
-              <p>Learn about the 7 principles of Bitcoin, Cryptocurrencies and Blockchain Technology.</p>
+              <h4>Conocimiento y confianza</h4>
+              <p>Aprende sobre las Criptomonedas, tecnología Blockchain y los 7 principios de Bitcoin.</p>
             </div>
           </div>
           <!-- End Col -->
@@ -142,14 +142,14 @@
           <!-- Start Col -->
           <div class="col-lg-6 col-md-12 pl-4">
             <div class="business-item-info">
-              <h3>A little bit about me</h3>
-              <p>Hello I'm Juan,</p>
-              <p>In 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
-              <p>At this point of my career, after having worked mostly in Global Finance roles for the past 9 years, I decided to pivot fully into cryptocurrencies and have set up this consultancy to help onboard individuals and SME's. I hope to meet you soon to show you how passionate I am about my clients education and success within this space.</p>
+              <h3>Un poco sobre mi</h3>
+              <p>Hola soy Juan,</p>
+              <p>En el 2016, cuando aprendí sobre Bitcoin y el problema fundamental que estaba tratando de resolver con respecto a las políticas monetarias y la inflación de la banca central, me sumergí de lleno en el tema. Dediqué miles de horas a aprender sobre blockchain, bitcoin, ethereum, smart contracts, DeFi y las tendencias generales del mercado. Además de las ganancias, estoy entusiasmado con el impacto que tendrá en la sociedad cuando haya una adopción masiva. Proteger la privacidad, la meritocracia y la responsabilidad en la sociedad es importante para mí y quiero dedicar mi vida profesional a ser una pieza activa de este movimiento.</p>
+              <p>Después de haber trabajado durante los últimos 6 años en varias compañías “Fortune 500” principalmente en aplicaciones financieras, he decidido pivotar completamente hacia las criptomonedas y he establecido esta consultoría para ayudar a las personas y compañías a incorporarse. Espero conocerte pronto para mostrarte lo apasionado que soy por la educación y el éxito de mis clientes dentro de este espacio.</p>
               <ul>
-                <li>+7 years working in Corporate Finance</li>
-                <li>+5 years working in Fortune 500 companies</li>
-                <li>+5 years involved in Cryptocurrencies/Blockchain</li>
+                <li>+7 años trabajando en Finanzas</li>
+                <li>+7 años trabajando en empresas Fortune 500</li>
+                <li>+5 años involucrado en Criptomonedas / Blockchain</li>
               </ul>
             </div>
           </div>
@@ -169,7 +169,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="features-text section-header text-center">  
-                <h2 class="section-title">What do I do?</h2>
+                <h2 class="section-title">¿Cómo puedo ayudarte?</h2>
             </div>
           </div>
 
@@ -185,8 +185,8 @@
                  <i class="lni-coffee-cup"></i>
                </div>
                <div class="feature-info float-left">
-                 <h4>INTRODUCTION & SECURITY</h4>
-                 <p>Personal introduction to Bitcoin and cryptocurrencies. You will understand the basics as well as security around exchanges and wallets.</p>
+                 <h4>PRESENTACIÓN Y SEGURIDAD</h4>
+                 <p>presentación personal a Bitcoin y criptomonedas. Comprenderás los conceptos básicos y la seguridad en torno a las carteras y las plataformas de intercambios.</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -201,8 +201,8 @@
                  <i class="lni-briefcase"></i>
                </div>
                <div class="feature-info float-left">
-                 <h4>FUNDAMENTALS & TRADING</h4>
-                 <p>Learn about the fundamental value and potential of blockchain. Keep up to date with trading platforms and their benefits (Coinbase, Kraken, Binance, CDC, Celsius, Blockfi and more)</p>
+                 <h4>APRENDE FUNDAMENTOS Y CÓMO COMERCIAR</h4>
+                 <p>Conoce el valor fundamental y el potencial de la tecnología blockchain. Manténgase actualizado con las plataformas de intercambios y sus beneficios (Coinbase, Kraken, Binance, CDC, Celsius, Blockfi y más).</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -217,8 +217,8 @@
                  <i class="lni-invention"></i>
                </div>
                <div class="feature-info float-left">
-                 <h4>PLANNING & INVESTING</h4>
-                 <p>Investing can be stressful and you should never invest more than you can afford to lose. We will provide you with guidance on investing principles based on my experience.</p>
+                 <h4>PLANIFICA E INVIERTE CON AYUDA</h4>
+                 <p>Invertir en algo nuevo puede ser estresante y nunca debes invertir dinero que no estés dispuesto a perder. Le proporcionaremos orientación sobre los principios de inversión basados ​​en nuestra experiencia.</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -233,8 +233,8 @@
                 <i class="lni-layers"></i>
                </div>
                <div class="feature-info float-left">
-                 <h4>BUILDING & GROWING PORTFOLIO</h4>
-                 <p>With over 8000 cryptocurrencies including Bitcoin, it is extremely important how to choose your assets based on value investing and project development.</p>
+                 <h4>CONSTRUYE Y CRECE TU CARTERA</h4>
+                 <p>Con más de 8000 criptomonedas, incluyendo Bitcoin, es extremadamente importante el saber elegir sus activos en función del desarrollo y valor de los proyectos.</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -249,8 +249,8 @@
                 <i class="lni-invention"></i>
               </div>
               <div class="feature-info float-left">
-                <h4>ADVISING & RISK MANAGING</h4>
-                <p>Even experienced traders can lose on bad trades if they fail to employ proper risk management or let their emotions get in the way. We prepare you and your portfolio to manage the market's volatility.</p>
+                <h4>GESTIÓNA RIESGO</h4>
+                <p>Incluso los traders experimentados pueden perder en malas operaciones si no emplean una gestión de riesgos adecuada o si dejan que sus emociones se interpongan. Te enseñaré y prepararé la cartera para gestionar la gran volatilidad que tiene el mercado de criptodivisas.</p>
               </div>
            </div>
            <!-- End Fetatures -->
@@ -265,8 +265,8 @@
                <i class="lni-layers"></i>
               </div>
               <div class="feature-info float-left">
-                <h4>PERSONALIZED SUPPORT & CONTENT</h4>
-                <p>Our community members have support catered to their needs as well as access to one on one meetings, quality content and a monthly newsletter based on valuable market data.</p>
+                <h4>SOPORTE Y CONTENIDO PERSONALIZADO</h4>
+                <p>Los miembros de nuestra comunidad cuentan con apoyo adaptado a sus necesidades, así como acceso a reuniones individuales, contenido de calidad y un boletín mensual basado en datos valiosos del mercado.</p>
               </div>
            </div>
            <!-- End Fetatures -->
@@ -288,10 +288,10 @@
           <div class="col-lg-12">
             <div class="contact-text section-header text-center">  
               <div>   
-                <h2 class="section-title">Get In Touch</h2>
+                <h2 class="section-title">Ponerse en contacto</h2>
                 <div class="desc-text">
                   <p></p>
-                  <p>Feel free to reach me on whatsapp, email or by phone at any time.<br/>Cryptocurrencies operate 24/7 and we want to be on par for our customers and their needs.</p>
+                  <p>No dudes en ponerte en contacto conmigo por whatsapp, correo electrónico o por teléfono en cualquier momento.<br/>Las criptomonedas funcionan las 24 horas del día, los 7 días de la semana y queremos estar a la par para nuestros clientes y sus necesidades.</p>
                 </div>
               </div> 
             </div>
