--- a/landing-page/es/index.html
+++ b/landing-page/es/index.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#home">Inicio Juanjo</a>
+                <a class="nav-link page-scroll" href="#home">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#services">Sobre Mi</a>
