cambios a la page en ingles

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -104,7 +104,7 @@
                 <img src="./img/CC_Customer.png">
               </div>
               <h4>Customer Centric Obsession</h4>
-              <p>The obsession to drive positive customer experiences is at the heart of our business.</p>
+              <p>The obsession to drive positive customer experiences is at the heart of the business.</p>
             </div>
           </div>
           <!-- End Col -->
@@ -145,7 +145,7 @@
               <h3>A little bit about me</h3>
               <p>Hello I'm Juan,</p>
               <p>In 2016 when I learned about Bitcoin and the fundamental problem it was trying to solve regarding central banking monetary policy and inflation, I dove head first into the subject. I poured thousands of hours into learning about blockchain, bitcoin, ethereum, smart contracts, DeFi and the overall market trends. Besides the financial gains, I am excited about the impact it will have on humanity when there is mass adoption. Protecting privacy, meritocracy and accountability in society is important for me, and I want to be an active piece of this movement.</p>
-              <p>At this point of my career, after having worked mostly in Global Finance roles for the past 9 years, I decided to pivot fully into cryptocurrencies and have set up this consultancy to help onboard individuals and SME's. I hope to meet you soon to show you how passionate I am about my clients education and success within this space.</p>
+              <p>At this point of my career, after having worked mostly in Global Finance roles for the past 6 years, I decided to pivot fully into cryptocurrencies and have set up this consultancy to help onboard individuals and SME's. I hope to meet you soon to show you how passionate I am about my clients education and success within this space.</p>
               <ul>
                 <li>+7 years working in Corporate Finance</li>
                 <li>+5 years working in Fortune 500 companies</li>
@@ -218,7 +218,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>PLANNING & INVESTING</h4>
-                 <p>Investing can be stressful and you should never invest more than you can afford to lose. We will provide you with guidance on investing principles based on my experience.</p>
+                 <p>Investing can be stressful and you should never invest more than you can afford to lose.I will provide you with guidance on investing principles based on my experience.</p>
                </div>
             </div>
             <!-- End Fetatures -->
@@ -250,7 +250,7 @@
               </div>
               <div class="feature-info float-left">
                 <h4>ADVISING & RISK MANAGING</h4>
-                <p>Even experienced traders can lose on bad trades if they fail to employ proper risk management or let their emotions get in the way. We prepare you and your portfolio to manage the market's volatility.</p>
+                <p>Even experienced traders can lose on bad trades if they fail to employ proper risk management or let their emotions get in the way. I prepare you and your portfolio to absorb the market's volatility.</p>
               </div>
            </div>
            <!-- End Fetatures -->
@@ -291,7 +291,7 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="desc-text">
                   <p></p>
-                  <p>Feel free to reach me on whatsapp, email or by phone at any time.<br/>Cryptocurrencies operate 24/7 and we want to be on par for our customers and their needs.</p>
+                  <p>Feel free to reach me on whatsapp, email or by phone at any time.<br/>Cryptocurrencies operate 24/7 and I want to be on par for our customers and their needs.</p>
                 </div>
               </div> 
             </div>
