email template optimization

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -192,7 +192,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                 <i class="lni-coffee-cup"></i>
+                 <img src="./img/CC_Security_2.png">
                </div>
                <div class="feature-info float-left">
                  <h4>INTRODUCTION & SECURITY</h4>
@@ -208,7 +208,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                 <i class="lni-briefcase"></i>
+                <img src="./img/CC_Certificate.png">
                </div>
                <div class="feature-info float-left">
                  <h4>FUNDAMENTALS & TRADING</h4>
@@ -224,7 +224,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                 <i class="lni-invention"></i>
+                <img src="./img/CC_Calendar.png">
                </div>
                <div class="feature-info float-left">
                  <h4>PLANNING & INVESTING</h4>
@@ -240,7 +240,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                <i class="lni-layers"></i>
+                <img src="./img/CC_Chart.png">
                </div>
                <div class="feature-info float-left">
                  <h4>BUILDING & GROWING PORTFOLIO</h4>
@@ -256,7 +256,7 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border1">
               <div class="feature-icon float-left">
-                <i class="lni-invention"></i>
+                <img src="./img/CC_Investigate.png">
               </div>
               <div class="feature-info float-left">
                 <h4>ADVISING & RISK MANAGING</h4>
@@ -272,7 +272,7 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border2">
               <div class="feature-icon float-left">
-               <i class="lni-layers"></i>
+                <img src="./img/CC_News.png">
               </div>
               <div class="feature-info float-left">
                 <h4>PERSONALIZED SUPPORT & CONTENT</h4>
