--- a/server/public/es/index.html
+++ b/server/public/es/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Bootstrap, Landing page, Template, Business, Service">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="author" content="Consulta Crypto">
+    <meta name="author" content="Francisco Roca">
     <title>Consulta Crypto</title>
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="./img/consulta-crypto-icon.png" type="image/png">
@@ -57,7 +57,11 @@
               </li>    
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#contact">Contacto</a>
-              </li>                         
+              </li>     
+              <li class="nav-item language">
+                <a class="nav-link page-scroll" href="https://consultacrypto.com">EN</a>
+                <a class="nav-link page-scroll" href="https://consultacrypto.com/es">ES</a>
+              </li>                      
             </ul>
           </div>
         </div>
@@ -66,7 +70,7 @@
         <div class="row space-100">
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">Bitcoin y las criptodivisas son para todos.<br/>No te quedes fuera por la falta de conocimiento y confianza.</h2>
+              <h2 class="head-title">Bitcoin y las criptodivisas son para todos.<br/>No te quedes fuera por la falta de conocimiento.</h2>
               <p>Con la Consulta Crypto aprenderás y entenderás los procesos necesarios para operar de manera segura con criptodivisas.</p>
               <div class="header-button">
                 <a href="#contact" class="btn btn-border-filled">Contáctanos</a>
@@ -89,13 +93,13 @@
       <div class="container">
 
         <div class="row">
-            <div class="col-lg-12">
-              <div class="features-text section-header text-center">  
-                  <h2 class="section-title">Principles and Values</h2>
-              </div>
+          <div class="col-lg-12">
+            <div class="features-text section-header text-center">  
+                <h2 class="section-title">Principles and Values</h2>
             </div>
-  
           </div>
+        </div>
+
         <div class="row">
           <!-- Start Col -->
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -193,7 +197,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                 <i class="lni-coffee-cup"></i>
+                <img src="./img/CC_Security_2.png">
                </div>
                <div class="feature-info float-left">
                  <h4>PRESENTACIÓN Y SEGURIDAD</h4>
@@ -209,7 +213,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                 <i class="lni-briefcase"></i>
+                <img src="./img/CC_Certificate.png">
                </div>
                <div class="feature-info float-left">
                  <h4>APRENDE FUNDAMENTOS Y CÓMO COMERCIAR</h4>
@@ -225,7 +229,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border1">
                <div class="feature-icon float-left">
-                 <i class="lni-invention"></i>
+                <img src="./img/CC_Calendar.png">
                </div>
                <div class="feature-info float-left">
                  <h4>PLANIFICA E INVIERTE CON AYUDA</h4>
@@ -241,7 +245,7 @@
              <!-- Start Fetatures -->
             <div class="feature-item featured-border2">
                <div class="feature-icon float-left">
-                <i class="lni-layers"></i>
+                <img src="./img/CC_Chart.png">
                </div>
                <div class="feature-info float-left">
                  <h4>CONSTRUYE Y CRECE TU CARTERA</h4>
@@ -257,7 +261,7 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border1">
               <div class="feature-icon float-left">
-                <i class="lni-invention"></i>
+                <img src="./img/CC_Investigate.png">
               </div>
               <div class="feature-info float-left">
                 <h4>GESTIÓNA RIESGO</h4>
@@ -273,7 +277,7 @@
             <!-- Start Fetatures -->
            <div class="feature-item featured-border2">
               <div class="feature-icon float-left">
-               <i class="lni-layers"></i>
+                <img src="./img/CC_News.png">
               </div>
               <div class="feature-info float-left">
                 <h4>SOPORTE Y CONTENIDO PERSONALIZADO</h4>
@@ -354,6 +358,14 @@
               </div>
             </div>            
           </form>
+          <div class="success-message">
+            Tu mensaje fue enviado correctamente!<br/>
+            Recibirás una copia lo antes posible.
+          </div>
+          <div class="error-message">
+            Ha habido un problema mandando tu mensaje!<br/>
+            Por favor, vuelve a intentarlo.
+          </div>
           </div>
           <!-- End Col -->
           <!-- Start Col -->
